testing environment implemented

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "isomorphic app using react, webpack, flux, firebase",
   "main": "index.js",
   "scripts": {
-    "test": "gulp lint && exit 0",
+    "test": "gulp test && exit 0",
     "postinstall": "npm run git:init",
     "git:init": "node git/init.js"
   },
@@ -26,8 +26,11 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
+    "dirty-chai": "^1.2.2",
     "eslint": "^2.7.0",
     "eslint-plugin-react": "^4.3.0",
     "gulp": "^3.9.1",
@@ -36,19 +39,38 @@
     "gulp-eslint": "^2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-load-plugins": "^1.2.2",
+    "gulp-nodemon": "^2.0.6",
     "gulp-print": "^2.0.1",
     "gulp-sass-lint": "^1.1.1",
     "gulp-task-listing": "^1.0.1",
     "gulp-util": "^3.0.7",
+    "isparta-loader": "^2.0.0",
+    "istanbul": "^0.4.3",
+    "karma": "^0.13.22",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-coverage": "^0.5.5",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.1",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
+    "phantomjs-prebuilt": "^2.1.7",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1",
     "yargs": "^4.6.0"
   },
   "dependencies": {
+    "jquery": "^2.2.3",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
   }
