sass watch argument + vscode problem matcher + gulp debugger

--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "gulp-if": "^2.0.0",
     "gulp-load-plugins": "^1.2.2",
     "gulp-nodemon": "^2.0.6",
+    "gulp-plumber": "^1.1.0",
     "gulp-print": "^2.0.1",
     "gulp-sass-lint": "^1.1.1",
     "gulp-task-listing": "^1.0.1",
     "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
     "isparta-loader": "^2.0.0",
     "istanbul": "^0.4.3",
     "karma": "^0.13.22",
