--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
   },
   "dependencies": {
     "jquery": "^2.2.3",
+    "material-ui": "^0.15.0-beta.1",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
