--- a/package.json
+++ b/package.json
@@ -68,11 +68,13 @@
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
+    "trim": "0.0.1",
     "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1",
     "yargs": "^4.6.0"
   },
   "dependencies": {
+    "firebase": "^2.4.2",
     "jquery": "^2.2.3",
     "material-ui": "^0.15.0-beta.1",
     "react": "^15.0.1",
