--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-eslint": "^6.0.2",
     "babel-jscs": "^2.0.5",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -75,6 +76,8 @@
     "yargs": "^4.6.0"
   },
   "dependencies": {
+    "alt": "^0.18.4",
+    "alt-utils": "^1.0.0",
     "firebase": "^2.4.2",
     "jquery": "^2.2.3",
     "material-ui": "^0.15.0-beta.1",
