--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "material-ui": "^0.15.0-beta.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-router": "^2.3.0",
     "react-tap-event-plugin": "^1.0.0"
   }
 }
